# automesh

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AUTOMESH_RENDER_BUILD.md  ROADMAP.md  UNREAL_SETUP.md
scripts/: render_test.py  sample_thingi10k.py
src/automesh/: __init__.py  cli.py  env.py  io.py  mesh.py  policies.py  qem.py  rewards.py
tests/: test_external_reward.py  test_io.py  test_qem_env.py
ue/AutoMeshRender/: AutoMeshRender.uproject  README.md  build.sh
ue/AutoMeshRender/Config/: DefaultEngine.ini  DefaultGame.ini
ue/AutoMeshRender/Source/: AutoMeshRender.Target.cs  AutoMeshRenderEditor.Target.cs
ue/AutoMeshRender/Source/AutoMeshRender/: AutoMeshRender.Build.cs  AutoMeshRender.Target.cs  AutoMeshRender.cpp  AutoMeshRender.h  MeshComparator.cpp  MeshComparator.h  RenderService.cpp  RenderService.h
