[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automesh"
version = "0.1.0"
description = "Research prototype for policy-guided QEM mesh simplification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
automesh = "automesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
